--- a/filizver/templates/filizver/_topic_list.html
+++ b/filizver/templates/filizver/_topic_list.html
@@ -1,6 +1,6 @@
 {% load tagging_tags %}
     <p class="avatar span pull-left">
-        <a href="{% url profiles_profile_detail object.user %}" class="thumbnail">
+        <a href="{% url accounts_profile_detail object.user %}" class="thumbnail">
             {% thumbnail object.user.get_profile.avatar "48x48" as im %}
             <img src="{{ im.url }}" width="{{ im.x }}" height="{{ im.y }}" alt="{{ object.user }}" />
             {% endthumbnail %}                    
@@ -8,7 +8,7 @@
     </p>
     <h3><a href="{{ object.get_absolute_url }}" target="_top" title="{{ object.title }}">{{ object.title }}</a></h3>
     <div class="meta">
-        <address class="user pull-left"><a href="{% url profiles_profile_detail object.user %}">{{ object.user }}</a></address>
+        <address class="user pull-left"><a href="{% url accounts_profile_detail object.user %}">{{ object.user }}</a></address>
         <time datetime="{{ object.date_created|date:"c" }}">{{ object.date_created|timesince }} {% trans 'ago' %}</time>
         <span class="comments-count"><a href="{{ object.get_absolute_url }}">
       		{% get_comment_count for filizver.topic object.id as comment_count %}
