--- a/filizver/templates/filizver/filizver_base.html
+++ b/filizver/templates/filizver/filizver_base.html
@@ -1,4 +1,4 @@
-{% extends "aside_base.html" %}
+{% extends "base_aside.html" %}
 {% load tagging_tags %}
 {% block title %}{% trans "Topics" %} - {{ block.super }}{% endblock title %}
 {% block breadcrumb %}{{ block.super }} &ndash; <a href="{% url topic.views.topic_list %}">{% trans "Topics" %}</a>{% endblock %}
