--- a/filizver/templates/filizver/topic_detail.html
+++ b/filizver/templates/filizver/topic_detail.html
@@ -2,7 +2,6 @@
 {% load tagging_tags %}
 
 {% block title %}{{ object.title }} - {{ block.super }}{% endblock title %}
-
 {% block main %}
     <!--// Headline -->
     <section id="breadcrumb" class="breadcrumb">
@@ -16,59 +15,14 @@
         <header class="page-header">
             <h1>{{ object.title }}</h1>
         </header>
-        <nav>
-            <form class="branch-form form form-inline" method="post" action="{% url filizver_branch_create %}">
-                {% csrf_token %}
-            	{% if form.errors %}
-            	<p class="error">{% trans 'There were errors in form' %}</p>
-            	{% endif %}
-                <input type="hidden" name="topic" id="id_topic" value="{{ object.pk }}">
-				{{ branch_form.source }}
-    			<button type="submit" class="btn btn-primary">{% trans "Branch out" %}</button>
-                {{ branch_form.media.css }}{{ branch_form.media.js }}
-                <script type="text/javascript">
-                    $(document).ready(function() {
-                        $(':input[name=source_0]').bind('autocompleteselect', function(event, ui) {
-                            $(this).parents("form").submit();
-                        });
-                    });
-                </script>
-            </form>
-            <ul class="nav nav-pills">
-                {% with object as topic %}
-                <li><a class="{% if module == 'passage' %}active {% endif %}passage" href="{% url filizver_post_create topic.id 'passage' %}">{% trans "Text" %}</a></li>
-                <li><a class="{% if module == 'photo' %}active {% endif %}photo" href="{% url filizver_post_create topic.id 'photo' %}">{% trans "Photo" %}</a></li>
-                {% endwith %}
-            </ul>
-        </nav>
-    <!--// Posts -->
+
+        
+    <!--// Entries -->
         {% if perms.topic.can_change or object.user == user %}
-        <script type="text/javascript"> 
-        // When the document is ready set up our sortable with it's inherant function(s) 
-        $(document).ready(function() { 
-            $("#posts").sortable({
-                handle:  '.handle',
-                axis: 'y',
-                placeholder: 'sortable-placeholder',
-                forcePlaceholderSize: true,
-                //tolerance: 'pointer',
-                update : function () { 
-                    //$("#posts").load("process-sortable.php?"+order);
-                    $.ajax({
-                        url: '{% url filizver_post_sort object.id %}', 
-                        type: 'POST',
-                        data: $('#posts').sortable('serialize'),
-                        success: function(feedback){
-                            $('#posts').html(feedback);
-                        },
-                    });
-                }
-            }); 
-        }); 
-        </script>     
+        {% include "filizver/_entry_form.html" %}
         {% endif %}
-        <section id="posts" class="main">
-            {% include "filizver/_topic_posts.html" %}
+        <section id="entries" class="main">
+            {% include "filizver/_topic_entries.html" %}
         </section>
     <!--// Details -->    
         {% if object.tag_list %}
