--- a/filizver/templates/filizver/_entry_form.html
+++ b/filizver/templates/filizver/_entry_form.html
@@ -2,9 +2,23 @@
 <form id="entry_form" action="{% url filizver_entry_create topic.id %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ entry_form.errors }}
-    {{ entry_form.branch }}{{ entry_form.text }}
-    {{ entry_form.source }}
+    <p>{{ entry_form.branch }}</p><p>{{ entry_form.text }}</p>
+    <p>{{ entry_form.source }}</p>
     <input type="submit" class="btn btn-primary" value="{% trans "Upload" %}">
 
+
+    <!-- The loading indicator is shown during file processing -->
+    <div class="fileupload-loading"></div>
+    <br>
+    <!-- The table listing the files available for upload/download -->
+    <table role="presentation" class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody></table>
+    <script src="{{ STATIC_URL }}js/jquery.iframe-transport.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/jquery.fileupload.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/jquery.fileupload-fp.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/jquery.fileupload-ui.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/image.upload.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.fileupload-ui.css" type="text/css" media="screen" title="no title" charset="utf-8">
+
     {{ entry_form.media }}
+    
 </form>
