--- a/filizver/templates/filizver/_image_entry_detail.html
+++ b/filizver/templates/filizver/_image_entry_detail.html
@@ -1,16 +1,19 @@
 {% with entry.content_object.display as display %}
 
     {% if perms.sprout.can_change or entry.user == user or entry.sprout.user == user %}
-    <form class="entry widget" action="" method="post">
-            {% csrf_token %}
-            <input type="radio" id="{{ entry.content_object.id }}_display_L" name="display" value="L" {% if display == "L" %}checked{% endif %} />
-            <label for="{{ entry.content_object.id }}_display_L">{% trans "Left" %}</label>
+    <form class="entry widget btn-group" action="" method="post">
+            {% csrf_token %}            
+            <label class="btn">
+                <input type="radio" id="{{ entry.content_object.id }}_display_L" 
+                name="display" value="L" {% if display == "L" %}checked{% endif %} />{% trans "Left" %}</label>            
             
-            <input type="radio" id="{{ entry.content_object.id }}_display_N" name="display" value="N" {% if display == "N" %}checked{% endif %} />
-            <label for="{{ entry.content_object.id }}_display_N">{% trans "None" %}</label>
+            <label class="btn">
+                <input type="radio" id="{{ entry.content_object.id }}_display_N" 
+                name="display" value="N" {% if display == "N" %}checked{% endif %} />{% trans "None" %}</label>            
             
-            <input type="radio" id="{{ entry.content_object.id }}_display_R" name="display" value="R" {% if display == "R" %}checked{% endif %} />
-            <label for="{{ entry.content_object.id }}_display_R">{% trans "Right" %}</label>
+            <label class="btn">
+                <input type="radio" id="{{ entry.content_object.id }}_display_R" 
+                name="display" value="R" {% if display == "R" %}checked{% endif %} />{% trans "Right" %}</label>
     </form>
     {% endif %}
 
