--- a/filizver/templates/filizver/_branch_entry_detail.html
+++ b/filizver/templates/filizver/_branch_entry_detail.html
@@ -1,1 +1,1 @@
-<a href="{{ entry.content_object.get_absolute_url }}">{{ entry.content_object.source }}</a>
+<a href="{{ entry.content_object.topic.get_absolute_url }}">{{ entry.content_object.source }}</a>
