--- a/filizver/forum/templates/forums/edit_reply.html
+++ b/filizver/forum/templates/forums/edit_reply.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="linkst">
 	<div class="inbox">
-		<ul><li><a href="{% url forums:index %}">{% trans "Root" %}</a> </li><li>&raquo; {% link reply.thread.forum %}</li><li>&raquo; {{ reply.thread }}</li></ul>
+		<ul><li><a href="{% url forum:index %}">{% trans "Root" %}</a> </li><li>&raquo; {% link reply.thread.forum %}</li><li>&raquo; {{ reply.thread }}</li></ul>
 		<div class="clearer"></div>
 	</div>
 </div>
