--- a/filizver/forum/templates/forums/forum.html
+++ b/filizver/forum/templates/forums/forum.html
@@ -10,15 +10,15 @@
 	<div class="inbox">
 		<div class="pagelink conl">{% paginate %}</div>
 		{% if user.is_authenticated %}
-			<p class="replylink conr"><a href="{% url forums:add_thread forum.id %}">{% trans "New thread" %}</a></p>
+			<p class="replylink conr"><a href="{% url forum:add_thread forum.id %}">{% trans "New thread" %}</a></p>
 		{% endif %}
-		<ul><li><a href="{% url forums:index %}">{% trans "Root" %}</a> </li><li>&raquo; {{ forum.name }}</li></ul>
+		<ul><li><a href="{% url forum:index %}">{% trans "Root" %}</a> </li><li>&raquo; {{ forum.name }}</li></ul>
 		<div class="clearer"></div>
 	</div>
 </div>
 <div id="vf" class="blocktable">
 	<h2>
-		<a href="{% url forums:forum_forum_feed forum.id %}"><img src="{{ STATIC_URL }}forums/img/feed-icon-small.png"  alt="[RSS Feed]" title="[RSS Feed]" class="rss" /></a>
+		<a href="{% url forum:forum_forum_feed forum.id %}"><img src="{{ STATIC_URL }}forums/img/feed-icon-small.png"  alt="[RSS Feed]" title="[RSS Feed]" class="rss" /></a>
 		<b><span>{{ forum.name }}</span></b>
 	</h2>
 	<div class="box">
@@ -53,7 +53,10 @@
 						</td>
 						<td class="tc2">{{ thread.reply_count }}</td>
 						<td class="tc3">{{ thread.views }}</td>
-						<td class="tcr"><a href="{{ thread.last_reply.get_absolute_url }}">{% forum_time thread.updated_date %}</a> <span class="byuser">{% trans "by" %} {{ thread.last_reply.user.username }}</span></td>
+						<td class="tcr"><a href="{{ thread.last_reply.get_absolute_url }}">
+						{% if thread.last_update %}
+						  {% forum_time thread.last_update %}
+						{% endif %}</a> <span class="byuser">{% trans "by" %} {{ thread.last_reply.user.username }}</span></td>
 					</tr>
 				{% endfor %}
 			{% else %}
@@ -68,9 +71,9 @@
 	<div class="inbox">
 		<div class="pagelink conl">{% paginate %}</div>
 		{% if user.is_authenticated %}
-			<p class="replylink conr"><a href="{% url forums:add_thread forum.id %}">{% trans "New thread" %}</a></p>
+			<p class="replylink conr"><a href="{% url forum:add_thread forum.id %}">{% trans "New thread" %}</a></p>
 		{% endif %}
-		<ul><li><a href="{% url forums:index %}">{% trans "Root" %}</a> </li><li>&raquo; {{ forum.name }}</li></ul>
+		<ul><li><a href="{% url forum:index %}">{% trans "Root" %}</a> </li><li>&raquo; {{ forum.name }}</li></ul>
 		<div class="clearer"></div>
 	</div>
 </div>
@@ -80,7 +83,7 @@
 	<form id="qjump" method="get" action="forum">
 		<div><label>{% trans "Jump to" %}
 		<br />
-		<select name="id" id="forum_id" onchange="window.location=('{% url forums:index %}'+this.options[this.selectedIndex].value)">
+		<select name="id" id="forum_id" onchange="window.location=('{% url forum:index %}'+this.options[this.selectedIndex].value)">
 			{% for category in categories %}
 				<optgroup label="{{ category }}">
 					{% for forum in category.forums.all %}
@@ -89,11 +92,11 @@
 				</optgroup>
 			{% endfor %}
 		</select>
-		<input type="button" onclick="window.location=('{% url forums:index %}'+getElementById('forum_id').value)" value=" {% trans "Go" %} " accesskey="g" />
+		<input type="button" onclick="window.location=('{% url forum:index %}'+getElementById('forum_id').value)" value=" {% trans "Go" %} " accesskey="g" />
 		</label></div>
 	</form>
 	{% if moderator %}
-		<p id="modcontrols"><a href="{% url forums:moderate forum.id %}">{% trans "Moderate forum" %}</a></p>
+		<p id="modcontrols"><a href="{% url forum:moderate forum.id %}">{% trans "Moderate forum" %}</a></p>
 	{% endif %}
 </div>
 {% endblock %}
