--- a/filizver/forum/templates/forums/thread.html
+++ b/filizver/forum/templates/forums/thread.html
@@ -11,8 +11,8 @@
 		<div class="pagelink conl">{% paginate %}</div>
 		<ul>
 			<li>
-			<a href="{% url forums:index %}">{% trans "Root" %} </a></li><li>&raquo; {% link thread.forum %} </li><li>&raquo; {{ thread.name }}
-			<a href="{% url forums:forum_thread_feed thread.id %}"><img src="{{ STATIC_URL }}forums/img/feed-icon-small.png" alt="[RSS Feed]" title="[RSS Feed]" class="breadcrumb_rss" /></a>
+			<a href="{% url forum:index %}">{% trans "Root" %} </a></li><li>&raquo; {% link thread.forum %} </li><li>&raquo; {{ thread.name }}
+			<a href="{% url forum:forum_thread_feed thread.id %}"><img src="{{ STATIC_URL }}forums/img/feed-icon-small.png" alt="[RSS Feed]" title="[RSS Feed]" class="breadcrumb_rss" /></a>
 			</li>
 		</ul>
 		<div class="clearer"></div>
@@ -88,20 +88,20 @@
 							<dd>{% trans "IP:" %} {{ reply.user_ip }}</dd>
 						{% endif %}
 						{% if defaults.REPUTATION_SUPPORT %}
-								<dd><a href="{% url forums:reputation reply.user.username %}">{% trans "Reputation" %}</a>:
+								<dd><a href="{% url forum:reputation reply.user.username %}">{% trans "Reputation" %}</a>:
 								{% if request.user != reply.user %} {# TODO: and user.is_authenticated #}
-									<a href="{% url forums:reputation reply.user.username %}?action=plus&amp;reply_id={{ reply.id }}"><img src="{{ STATIC_URL }}forums/img/reputation/warn_add.gif" alt="+" /></a>&nbsp;&nbsp;<strong>{{ reply.user.forum_profile.reply_total|default_if_none:"0" }}&nbsp;&nbsp;</strong><a href="{% url forums:reputation reply.user.username %}?action=minus&amp;reply_id={{ reply.id }}"><img src="{{ STATIC_URL }}forums/img/reputation/warn_minus.gif" alt="-" /></a>
+									<a href="{% url forum:reputation reply.user.username %}?action=plus&amp;reply_id={{ reply.id }}"><img src="{{ STATIC_URL }}forums/img/reputation/warn_add.gif" alt="+" /></a>&nbsp;&nbsp;<strong>{{ reply.user.forum_profile.reply_total|default_if_none:"0" }}&nbsp;&nbsp;</strong><a href="{% url forum:reputation reply.user.username %}?action=minus&amp;reply_id={{ reply.id }}"><img src="{{ STATIC_URL }}forums/img/reputation/warn_minus.gif" alt="-" /></a>
 								{% else %}
 									<strong>{{ reply.user.forum_profile.reply_total|default_if_none:"0" }}</strong>
 								{% endif %}
 								</dd>
 						{% endif %}
-						<dd class="usercontacts"><a href="{% url forums:forum_profile reply.user.username %}">{% trans "Profile" %}</a>&nbsp;&nbsp;
+						<dd class="usercontacts"><a href="{% url forum:forum_profile reply.user.username %}">{% trans "Profile" %}</a>&nbsp;&nbsp;
 						{% if reply.user.forum_profile.privacy_permission == 0 %}
 							<a href="mailto:{{ reply.user.email }}">{% trans "E-mail" %}</a>&nbsp;&nbsp;
 						{% else %}
 							{% if reply.user.forum_profile.privacy_permission == 1 %}
-								<a href="{% url forums:misc %}?mail_to={{ reply.user.username }}">{% trans "Send e-mail" %}</a>&nbsp;&nbsp;
+								<a href="{% url forum:misc %}?mail_to={{ reply.user.username }}">{% trans "Send e-mail" %}</a>&nbsp;&nbsp;
 							{% endif %}
 						{% endif %}
 						{% if defaults.PM_SUPPORT %}
@@ -145,14 +145,14 @@
 			</div>
 			<div class="replyfootright">
 				<ul>
-					<li class="replyreport"><a href="{% url forums:misc %}?action=report&amp;reply_id={{ reply.id }}">{% trans "Report" %}</a> </li>
+					<li class="replyreport"><a href="{% url forum:misc %}?action=report&amp;reply_id={{ reply.id }}">{% trans "Report" %}</a> </li>
 					{% if moderator or reply|forum_equal_to:last_reply %}
 						{% if moderator or reply.user|forum_equal_to:user %}
-							<li class="replydelete">| <a onclick="return confirm('{% trans "Are you sure you want to delete this reply?" %}')" href="{% url forums:delete_reply reply.id %}">{% trans "Delete" %}</a> </li>
+							<li class="replydelete">| <a onclick="return confirm('{% trans "Are you sure you want to delete this reply?" %}')" href="{% url forum:delete_reply reply.id %}">{% trans "Delete" %}</a> </li>
 						{% endif %}
 					{% endif %}
-					{% if moderator or reply|forum_replyed_by:user %}
-						<li class="replyedit">| <a href="{% url forums:edit_reply reply.id %}">{% trans "Edit" %}</a> </li>
+					{% if moderator or reply|forum_replied_by:user %}
+						<li class="replyedit">| <a href="{% url forum:edit_reply reply.id %}">{% trans "Edit" %}</a> </li>
 					{% endif %}
 					{% if user.is_authenticated %}
 						<li class="replyquote">| <a onclick="return copy_paste('p{{ reply.id }}');" href="#reply" title="{% trans "Full quote or quote selected text form this reply." %}">{% trans "Quote" %}</a></li>
@@ -167,17 +167,17 @@
 	<div class="inbox">
 		<div class="pagelink conl">{% paginate %}</div>
 			<ul>
-			    <li><a href="{% url forums:index %}">{% trans "Root" %} </a></li>
+			    <li><a href="{% url forum:index %}">{% trans "Root" %} </a></li>
 			    <li>&raquo; {% link thread.forum %} </li>
 			    <li>
-			        &raquo; {{ thread }}<a href="{% url forums:forum_thread_feed thread.id %}"><img src="{{ STATIC_URL }}forums/img/feed-icon-small.png" alt="[RSS Feed]" title="[RSS Feed]" class="breadcrumb_rss" /></a>
+			        &raquo; {{ thread }}<a href="{% url forum:forum_thread_feed thread.id %}"><img src="{{ STATIC_URL }}forums/img/feed-icon-small.png" alt="[RSS Feed]" title="[RSS Feed]" class="breadcrumb_rss" /></a>
 			    </li>
             </ul>
 		{% if user.is_authenticated %}
 			{% if subscribed %}
-				<a class="subscribelink clearb" href="{% url forums:forum_delete_subscription thread.id %}?from_thread">{% trans "Unsubscribe" %}</a>
+				<a class="subscribelink clearb" href="{% url forum:forum_delete_subscription thread.id %}?from_thread">{% trans "Unsubscribe" %}</a>
 			{% else %}
-				<a class="subscribelink clearb" href="{% url forums:forum_add_subscription thread.id %}">{% trans "Subscribe" %}</a>
+				<a class="subscribelink clearb" href="{% url forum:forum_add_subscription thread.id %}">{% trans "Subscribe" %}</a>
 			{% endif %}
 		{% endif %}
 		<div class="clearer"></div>
@@ -186,7 +186,7 @@
 
 {% if reply_form %}
     {% with form=reply_form %}
-        {% include "forums/includes/reply_form.html" %}
+        {% include "forums/reply_form.html" %}
     {% endwith %}
 {% endif %}
 
@@ -197,7 +197,7 @@
 	<form id="qjump" method="get" action="forum">
 		<div><label>{% trans "Jump to " %}
 		<br />
-		<select name="id" id="forum_id" onchange="window.location=('{% url forums:index %}'+this.options[this.selectedIndex].value)">
+		<select name="id" id="forum_id" onchange="window.location=('{% url forum:index %}'+this.options[this.selectedIndex].value)">
 			{% for category in categories %}
 				<optgroup label="{{ category }}">
 					{% for forum in category.forums.all %}
@@ -206,22 +206,22 @@
 				</optgroup>
 			{% endfor %}
 		</select>
-		<input type="button" onclick="window.location=('{% url forums:index %}'+getElementById('forum_id').value)" value=" {% trans "Go" %} " accesskey="g" />
+		<input type="button" onclick="window.location=('{% url forum:index %}'+getElementById('forum_id').value)" value=" {% trans "Go" %} " accesskey="g" />
 		</label></div>
 	</form>
 	<dl id="modcontrols"><dt><strong>{% trans "Moderator control" %}</strong></dt>
 	{% if moderator %}
-		<dd><a href="{% url forums:delete_replies thread.id %}">{% trans "Delete multiple replies" %}</a></dd>
-		<dd><a href="{% url forums:move_thread %}?thread_id={{ thread.id }}">{% trans "Move thread" %}</a></dd>
+		<dd><a href="{% url forum:delete_replies thread.id %}">{% trans "Delete multiple replies" %}</a></dd>
+		<dd><a href="{% url forum:move_thread %}?thread_id={{ thread.id }}">{% trans "Move thread" %}</a></dd>
 		{% if thread.closed %}
-			<dd><a href="{% url forums:open_close_thread thread.id 'o' %}">{% trans "Open thread" %}</a></dd>
+			<dd><a href="{% url forum:open_close_thread thread.id 'o' %}">{% trans "Open thread" %}</a></dd>
 		{% else %}
-			<dd><a href="{% url forums:open_close_thread thread.id 'c' %}">{% trans "Close thread" %}</a></dd>
+			<dd><a href="{% url forum:open_close_thread thread.id 'c' %}">{% trans "Close thread" %}</a></dd>
 		{% endif %}
 		{% if thread.sticky %}
-			<dd><a href="{% url forums:stick_unstick_thread thread.id 'u' %}">{% trans "Unstick thread" %}</a></dd></dl>
+			<dd><a href="{% url forum:stick_unstick_thread thread.id 'u' %}">{% trans "Unstick thread" %}</a></dd></dl>
 		{% else %}
-			<dd><a href="{% url forums:stick_unstick_thread thread.id 's' %}">{% trans "Stick thread" %}</a></dd></dl>
+			<dd><a href="{% url forum:stick_unstick_thread thread.id 's' %}">{% trans "Stick thread" %}</a></dd></dl>
 		{% endif %}
 	{% endif %}
     </dl>
