--- a/filizver/branch/templates/branch/_branch_form.html
+++ b/filizver/branch/templates/branch/_branch_form.html
@@ -1,11 +1,19 @@
 {% load i18n %}
-	{{ branch_form.source }}
-	<button type="submit" class="btn btn-primary">{% trans "Branch out" %}</button>
-    {{ branch_form.media.css }}{{ branch_form.media.js }}
+{% csrf_token %}
+	{{ form.source }}
+	{{ form.plugin }}
+    {{ form.media.css }}{{ form.media.js }}
     <script type="text/javascript">
         $(document).ready(function() {
-            $(':input[name=source_0]').bind('autocompleteselect', function(event, ui) {
+            function newParameters(query) {
+                query.topic = $('#id_topic').val();
+            }
+            $('#id_body_0').djselectable('option', 'prepareQuery', newParameters);
+            $(':input[name=body_0]').bind('autocompleteselect', function(event, ui) {
                 $(this).parents("form").submit();
             });
         });
     </script>
+    <div class="form-actions">
+        <input type="submit" class="btn" value="{% trans "Submit" %}">
+    </div>
