--- a/filizver/forum/templates/forums/base.html
+++ b/filizver/forum/templates/forums/base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "filizver/filizver_base.html" %}
 {% block title %}{{ block.super }} / {% trans "Forum" %}{% endblock %}
 {% block content %}
 {% endblock content %}
