--- a/filizver/project/templates/project/project_base.html
+++ b/filizver/project/templates/project/project_base.html
@@ -1,7 +1,3 @@
-{% extends "base.html" %}
+{% extends "filizver/filizver_base.html" %}
 
-{% block content %}
-{% block toolbar %}{% endblock toolbar %}
 {% block main %}{% endblock main %}
-{% block side %}{% endblock side %}
-{% endblock content %}
