--- a/filizver/core/templates/filizver/filizver_base.html
+++ b/filizver/core/templates/filizver/filizver_base.html
@@ -1,12 +1,12 @@
 {% extends "base_aside.html" %}
-{% load tagging_tags navigation %}
+{% load tagging_tags navigation plugins %}
 {% block title %}{% trans "Topics" %} - {{ block.super }}{% endblock title %}
 {% block navbar_menu %}
-    <li class="{% active_path request "^/$" %}"><a href="/"><span class="icon-home"></span> {% trans "Home" %}</a></li>
-    <li class="{% active_path request user.get_profile.get_absolute_url %}"><a href="{{ user.get_profile.get_absolute_url }}"><span class="icon-user"></span> {% trans "Me" %}</a></li>
-    <li class="{% active_url request filizver_topic_list  %}"><a href="{% url filizver:topic_list %}"><span class="icon-list"></span> {% trans "Latest" %}</a></li>    
-</a></li>    
-{% endblock %}
+	{% get_plugins filizver.core.plugins.MenuPoint as plugins %}
+    {% for plugin in plugins %}
+    <li class="{% active_path request plugin.get_link %}"><a href="{{ plugin.get_link }}">{{ plugin.get_label }}</a></li>
+    {% endfor %}
+	{% endblock %}
 {% block breadcrumb %}{{ block.super }} &ndash; <a href="{% url topic.views.topic_list %}">{% trans "Topics" %}</a>{% endblock %}
 {% block script %}{{ block.super }}
     <script type="text/javascript" src="{{ STATIC_URL }}js/filizver.js"></script>
