--- a/filizver/board/templates/board/board_form.html
+++ b/filizver/board/templates/board/board_form.html
@@ -1,4 +1,4 @@
-{% extends "project/project_base.html" %}
+{% extends "board/board_base.html" %}
 {% block main %}
 <form class="form" action="" method="post" accept-charset="utf-8">
 	{% csrf_token %}
