--- a/filizver/_apps/branch/templates/branch/_branch_block.html
+++ b/filizver/_apps/branch/templates/branch/_branch_block.html
@@ -5,7 +5,7 @@
     <article class="branch row {% cycle odd,even %}">
         <div class="avatar">
             <a href="{% url 'accounts_profile_detail' branch.user %}">
-                {% thumbnail branch.user.get_profile.avatar "48x48" as im %}
+                {% thumbnail branch.user.avatar "48x48" as im %}
                 <img src="{{ im.url }}" width="{{ im.x }}" height="{{ im.y }}" alt="{{ branch.user }}" />
                 {% endthumbnail %}
             </a>                     
