--- a/filizver/templates/filizver/topic_create.html
+++ b/filizver/templates/filizver/topic_create.html
@@ -10,7 +10,7 @@
     {% endif %}
 
     {% if form and not created %}
-        {% include "topic/_topic_form.html" %}
+        {% include "filizver/_topic_form.html" %}
     {% endif %}
 
 {% endblock %}
