--- a/filizver/templates/filizver/topic_list.html
+++ b/filizver/templates/filizver/topic_list.html
@@ -1,20 +1,18 @@
-{% extends "filizver/filizver_base.html" %}
-{% load pagination_tags relationship_tags %}
+{% extends "filizver/base_topic.html" %}
+{% load pagination_tags %}
 {% block title %}{% trans 'All topics' %} - {{ block.super }}{% endblock title %}
 {% block breadcrumb %}{{ block.super }} &ndash; <a href="{% url 'topic.views.topic_list' %}">{% trans "Latest topics" %}</a>{% endblock %}
 
 {% block main %}
-{% with object_list|following_content:request.user as entries %}
-    {% autopaginate entries 10 %}
+    {% autopaginate object_list 10 %}
     <header class="main">
-        <h2>{% trans "Latest" %}</h2>
+        <h2>{% trans "Latest Topics" %}</h2>
         <p>{% trans "Page" %}: <strong>{{ page_obj.number }}</strong> / {{ paginator.num_pages }}</p>
     </header>
-    {% include "topic/_topic_form.html" %}
     <section class="main">
-    {% for object in entries %}
+    {% for object in object_list %}
         <article class="section row {% cycle odd,even %}">
-            {% include "topic/_topic_list.html" %}
+            {% include "filizver/_topic_list.html" %}
         </article>
     {% empty %}
         <p class="section empty">{% trans 'Not found any record.' %}</p>    
@@ -23,5 +21,4 @@
     <footer class="main">
         {% paginate %}
     </footer>
-    {% endwith %}
 {% endblock %}
